--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ allprojects {
         maven {
             url 'https://maven.fabric.io/public'
         }
+        maven {
+            url "https://jitpack.io"
+        }
         ivy {
             url 'http://cwe.cs.washington.edu:8082/artifactory/libs-demo/'
         }
