--- a/tables_app/build.gradle
+++ b/tables_app/build.gradle
@@ -110,6 +110,7 @@ dependencies {
     compile fileTree(include: '*.jar', dir: 'libs')
     compile 'com.android.support:support-annotations:25.4.0'
     compile 'com.android.support:support-v13:25.4.0'
+    compile 'com.github.Todd-Davies:ProgressWheel:1.2'
     compile 'com.google.firebase:firebase-core:10.0.1'
     compile ('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
         transitive =true;
