--- a/tables_app/src/main/AndroidManifest.xml
+++ b/tables_app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="org.opendatakit.tables">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -26,6 +27,7 @@
 
     <application
             android:name="org.opendatakit.tables.application.Tables"
+            tools:node="replace"
             android:icon="@drawable/icon"
             android:label="@string/app_name"
             android:logo="@drawable/odk_tables_ab_icon"
@@ -41,6 +43,9 @@
         <uses-library
                 android:name="com.google.android.maps"
                 android:required="false"/>
+
+        <meta-data android:name="com.google.android.gms.version"
+                   android:value="@integer/google_play_services_version" />
 
         <activity
                 android:name=".activities.Launcher"
